refactor: otimização do service
- Substituição do mapeamento manual por MapStruct
- Refatoração do RickAndMortyService para estilo funcional e fluente
- Atualização dos testes unitários para mockar o Mapper
- Inclusão das dependências do MapStruct no pom.xml